--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,6 +8,18 @@
   }
 }
 
+.header-logo {
+  margin-top: 16px;
+  
+  @media screen and (min-width: 768px) {
+    margin-top: 26px;
+ }
+ @media screen and (min-width: 1200px) {
+    @include font-styles(26px, 1.19, 700, 0.03em);
+    margin-top: 24px;
+ }
+}
+
 .header-div {
   display: flex;
 }
