--- a/sass/components/_user-portfolio.scss
+++ b/sass/components/_user-portfolio.scss
@@ -1,6 +1,15 @@
+.portfolio-section {
+  padding-bottom: 60px;
+  padding-top: 60px;
+
+   @media screen and (min-width: 1200px) {
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
+}
+
 .user-portfolio {
 
-  margin-bottom: -30px;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
@@ -18,12 +27,14 @@
     flex-grow: 0;
     flex-shrink: 0;
     width: 100%;
-    height: 404px;
+    height: auto;
     margin-bottom: 30px;
+    &:nth-child(9) {
+      margin-bottom: 0;
+    }
     @media screen and (min-width: 768px) {
       width: calc(100% / 2 - 30px);
       margin-right: 30px;
-      height: 440px;
       &:nth-child(9) {
         margin-bottom: 0;
       }
@@ -64,9 +75,9 @@
   &__img {
     position: relative;
     overflow: hidden;
-    @media screen and (min-width: 768px) {
-      height: 294px;
-    }
+    // @media screen and (min-width: 768px) {
+    //   height: 294px;
+    // }
   }
 
   &__text {
