--- a/sass/components/_user-team.scss
+++ b/sass/components/_user-team.scss
@@ -15,11 +15,13 @@
     margin-bottom: 30px;
 
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+    font-size: 28px;
+    line-height: 1.18;
     letter-spacing: 0.03em;
     @media screen and (min-width: 1200px) {
       margin-bottom: 50px;
+      font-size: 36px;
+      line-height: 1.17;
     }
   }
 
@@ -56,7 +58,7 @@
       margin-bottom: 0;
     }
     @media screen and (min-width: 768px) {
-      width: calc(100% / 2 - 30px);
+      width: 354px;
       margin-right: 30px;
       margin-bottom: 30px;
       &:nth-child(2n) {
@@ -67,7 +69,7 @@
       }
     }
     @media screen and (min-width: 1200px) {
-      width: calc(100% / 4 - 30px);
+      width: 270px;
       margin-right: 30px;
       margin-bottom: 0;
       &:nth-child(4) {
